# wavelet-2b

./: .gitignore  LICENSE  README.md  backtester.py  backtester_scaled.py  chart.py  data_loader.py  position_sizer.py  pyproject.toml  requirements.txt  run_comparison.py  wavelet_denoiser.py  wavelet_kalman_calibrate.py
charts/: chart_twob.py
results/: comparison_20260419.csv  comparison_20260513.csv  comparison_20260604.csv
strategy_folder/: _strategy_base_class.py  kalman_cross.py  kalman_ma_hybrid.py  ma_cross.py  two_b.py  wavelet_kalman_cross.py  wavelet_ma_cross.py  wavelet_two_b.py
